{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 89,
  "lineage": "a5ebb2cb-fde3-b56a-a994-d8dd4285e935",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-095348d25d5081d12",
            "arn": "arn:aws:ec2:us-east-1:973795184365:instance/i-05e409d90ec528e7a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05e409d90ec528e7a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04345ae45f8f729d1",
            "private_dns": "ip-192-168-1-248.ec2.internal",
            "private_ip": "192.168.1.248",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-008612e42a0c7a823",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06456178ae0f913a9",
            "tags": {
              "CreatedAt": "2021-05-13",
              "ManagedBy": "Terraform",
              "Name": "web Machine",
              "Owner": "AWS Devops",
              "Project": "AWS com Terraform",
              "Service": "Interview"
            },
            "tags_all": {
              "CreatedAt": "2021-05-13",
              "ManagedBy": "Terraform",
              "Name": "web Machine",
              "Owner": "AWS Devops",
              "Project": "AWS com Terraform",
              "Service": "Interview"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0488c9369a9e1bd00"
            ]
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.this",
            "aws_vpc.this",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973795184365:internet-gateway/igw-0efb8baf35293dbae",
            "id": "igw-0efb8baf35293dbae",
            "owner_id": "973795184365",
            "tags": {
              "CreatedAt": "2021-05-13",
              "ManagedBy": "Terraform",
              "Name": "Terraform IGW ",
              "Owner": "AWS Devops",
              "Project": "AWS com Terraform",
              "Service": "Interview"
            },
            "tags_all": {
              "CreatedAt": "2021-05-13",
              "ManagedBy": "Terraform",
              "Name": "Terraform IGW ",
              "Owner": "AWS Devops",
              "Project": "AWS com Terraform",
              "Service": "Interview"
            },
            "vpc_id": "vpc-03abeb0a62995ec66"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:973795184365:loadbalancer/app/Terraform-ALB/d2c3d809e833d9c2",
            "arn_suffix": "app/Terraform-ALB/d2c3d809e833d9c2",
            "dns_name": "Terraform-ALB-687993837.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:973795184365:loadbalancer/app/Terraform-ALB/d2c3d809e833d9c2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Terraform-ALB",
            "security_groups": [
              "sg-02447c9659452cef1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-037267f34121c37a5"
              },
              {
                "subnet_id": "subnet-06456178ae0f913a9"
              }
            ],
            "subnets": [
              "subnet-037267f34121c37a5",
              "subnet-06456178ae0f913a9"
            ],
            "tags": {
              "CreatedAt": "2021-05-13",
              "ManagedBy": "Terraform",
              "Name": "Terraform ALB",
              "Owner": "AWS Devops",
              "Project": "AWS com Terraform",
              "Service": "Interview"
            },
            "tags_all": {
              "CreatedAt": "2021-05-13",
              "ManagedBy": "Terraform",
              "Name": "Terraform ALB",
              "Owner": "AWS Devops",
              "Project": "AWS com Terraform",
              "Service": "Interview"
            },
            "vpc_id": "vpc-03abeb0a62995ec66",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:973795184365:listener/app/Terraform-ALB/d2c3d809e833d9c2/05cf787a021d3013",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:973795184365:targetgroup/ALB-TG/07283ad4d6441e8d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:973795184365:listener/app/Terraform-ALB/d2c3d809e833d9c2/05cf787a021d3013",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:973795184365:loadbalancer/app/Terraform-ALB/d2c3d809e833d9c2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.this",
            "aws_lb_target_group.this",
            "aws_security_group.alb",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:973795184365:targetgroup/ALB-TG/07283ad4d6441e8d",
            "arn_suffix": "targetgroup/ALB-TG/07283ad4d6441e8d",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:973795184365:targetgroup/ALB-TG/07283ad4d6441e8d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03abeb0a62995ec66"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973795184365:route-table/rtb-0eb967ed33d281bca",
            "id": "rtb-0eb967ed33d281bca",
            "owner_id": "973795184365",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CreatedAt": "2021-05-13",
              "ManagedBy": "Terraform",
              "Name": "Terraform Private",
              "Owner": "AWS Devops",
              "Project": "AWS com Terraform",
              "Service": "Interview"
            },
            "tags_all": {
              "CreatedAt": "2021-05-13",
              "ManagedBy": "Terraform",
              "Name": "Terraform Private",
              "Owner": "AWS Devops",
              "Project": "AWS com Terraform",
              "Service": "Interview"
            },
            "vpc_id": "vpc-03abeb0a62995ec66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973795184365:route-table/rtb-00778e74b30d34707",
            "id": "rtb-00778e74b30d34707",
            "owner_id": "973795184365",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0efb8baf35293dbae",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedAt": "2021-05-13",
              "ManagedBy": "Terraform",
              "Name": "Terraform Public",
              "Owner": "AWS Devops",
              "Project": "AWS com Terraform",
              "Service": "Interview"
            },
            "tags_all": {
              "CreatedAt": "2021-05-13",
              "ManagedBy": "Terraform",
              "Name": "Terraform Public",
              "Owner": "AWS Devops",
              "Project": "AWS com Terraform",
              "Service": "Interview"
            },
            "vpc_id": "vpc-03abeb0a62995ec66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Private A",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0820869750b35efb0",
            "route_table_id": "rtb-0eb967ed33d281bca",
            "subnet_id": "subnet-043fd5a0a347bb56f"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "Private B",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004d3574f752f9d99",
            "route_table_id": "rtb-0eb967ed33d281bca",
            "subnet_id": "subnet-0a4b61a09734f0771"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "Public A",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c18842058fac72b8",
            "route_table_id": "rtb-00778e74b30d34707",
            "subnet_id": "subnet-06456178ae0f913a9"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "Public B",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0253d44f73317f6eb",
            "route_table_id": "rtb-00778e74b30d34707",
            "subnet_id": "subnet-037267f34121c37a5"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973795184365:security-group/sg-02447c9659452cef1",
            "description": "Load Balancer SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02447c9659452cef1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ALB-SG",
            "name_prefix": "",
            "owner_id": "973795184365",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2021-05-13",
              "ManagedBy": "Terraform",
              "Name": "Load Balancer",
              "Owner": "AWS Devops",
              "Project": "AWS com Terraform",
              "Service": "Interview"
            },
            "tags_all": {
              "CreatedAt": "2021-05-13",
              "ManagedBy": "Terraform",
              "Name": "Load Balancer",
              "Owner": "AWS Devops",
              "Project": "AWS com Terraform",
              "Service": "Interview"
            },
            "timeouts": null,
            "vpc_id": "vpc-03abeb0a62995ec66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "autoscaling",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973795184365:security-group/sg-0d2a8fdd1342c812a",
            "description": "Security group that allows ssh/http and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d2a8fdd1342c812a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02447c9659452cef1"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "autoscaling",
            "name_prefix": "",
            "owner_id": "973795184365",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2021-05-13",
              "ManagedBy": "Terraform",
              "Name": "Auto Scaling",
              "Owner": "AWS Devops",
              "Project": "AWS com Terraform",
              "Service": "Interview"
            },
            "tags_all": {
              "CreatedAt": "2021-05-13",
              "ManagedBy": "Terraform",
              "Name": "Auto Scaling",
              "Owner": "AWS Devops",
              "Project": "AWS com Terraform",
              "Service": "Interview"
            },
            "timeouts": null,
            "vpc_id": "vpc-03abeb0a62995ec66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973795184365:security-group/sg-0488c9369a9e1bd00",
            "description": "Allow public inbound traffic",
            "egress": [],
            "id": "sg-0488c9369a9e1bd00",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Web",
            "name_prefix": "",
            "owner_id": "973795184365",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2021-05-13",
              "ManagedBy": "Terraform",
              "Name": "Web Server",
              "Owner": "AWS Devops",
              "Project": "AWS com Terraform",
              "Service": "Interview"
            },
            "tags_all": {
              "CreatedAt": "2021-05-13",
              "ManagedBy": "Terraform",
              "Name": "Web Server",
              "Owner": "AWS Devops",
              "Project": "AWS com Terraform",
              "Service": "Interview"
            },
            "timeouts": null,
            "vpc_id": "vpc-03abeb0a62995ec66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973795184365:subnet/subnet-06456178ae0f913a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-06456178ae0f913a9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "973795184365",
            "tags": {
              "CreatedAt": "2021-05-13",
              "ManagedBy": "Terraform",
              "Name": "Public A",
              "Owner": "AWS Devops",
              "Project": "AWS com Terraform",
              "Service": "Interview"
            },
            "tags_all": {
              "CreatedAt": "2021-05-13",
              "ManagedBy": "Terraform",
              "Name": "Public A",
              "Owner": "AWS Devops",
              "Project": "AWS com Terraform",
              "Service": "Interview"
            },
            "vpc_id": "vpc-03abeb0a62995ec66"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "pub_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973795184365:subnet/subnet-037267f34121c37a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-037267f34121c37a5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "973795184365",
            "tags": {
              "CreatedAt": "2021-05-13",
              "ManagedBy": "Terraform",
              "Name": "Public B",
              "Owner": "AWS Devops",
              "Project": "AWS com Terraform",
              "Service": "Interview"
            },
            "tags_all": {
              "CreatedAt": "2021-05-13",
              "ManagedBy": "Terraform",
              "Name": "Public B",
              "Owner": "AWS Devops",
              "Project": "AWS com Terraform",
              "Service": "Interview"
            },
            "vpc_id": "vpc-03abeb0a62995ec66"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "pvt_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973795184365:subnet/subnet-043fd5a0a347bb56f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-043fd5a0a347bb56f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "973795184365",
            "tags": {
              "CreatedAt": "2021-05-13",
              "ManagedBy": "Terraform",
              "Name": "Private A",
              "Owner": "AWS Devops",
              "Project": "AWS com Terraform",
              "Service": "Interview"
            },
            "tags_all": {
              "CreatedAt": "2021-05-13",
              "ManagedBy": "Terraform",
              "Name": "Private A",
              "Owner": "AWS Devops",
              "Project": "AWS com Terraform",
              "Service": "Interview"
            },
            "vpc_id": "vpc-03abeb0a62995ec66"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "pvt_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973795184365:subnet/subnet-0a4b61a09734f0771",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-0a4b61a09734f0771",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "973795184365",
            "tags": {
              "CreatedAt": "2021-05-13",
              "ManagedBy": "Terraform",
              "Name": "Private B",
              "Owner": "AWS Devops",
              "Project": "AWS com Terraform",
              "Service": "Interview"
            },
            "tags_all": {
              "CreatedAt": "2021-05-13",
              "ManagedBy": "Terraform",
              "Name": "Private B",
              "Owner": "AWS Devops",
              "Project": "AWS com Terraform",
              "Service": "Interview"
            },
            "vpc_id": "vpc-03abeb0a62995ec66"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973795184365:vpc/vpc-03abeb0a62995ec66",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-03563526d588d7a81",
            "default_route_table_id": "rtb-0375b3df01a9b6bf5",
            "default_security_group_id": "sg-0698d4a3a11af9f13",
            "dhcp_options_id": "dopt-79526703",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03abeb0a62995ec66",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0375b3df01a9b6bf5",
            "owner_id": "973795184365",
            "tags": {
              "CreatedAt": "2021-05-13",
              "ManagedBy": "Terraform",
              "Name": "Terraform VPC ",
              "Owner": "AWS Devops",
              "Project": "AWS com Terraform",
              "Service": "Interview"
            },
            "tags_all": {
              "CreatedAt": "2021-05-13",
              "ManagedBy": "Terraform",
              "Name": "Terraform VPC ",
              "Owner": "AWS Devops",
              "Project": "AWS com Terraform",
              "Service": "Interview"
            }
          }
        }
      ]
    }
  ]
}